# online-library-service

./: CMakeLists.txt  README.md  main.cpp
include/builder/: AuthorBuilder.h  BookBuilder.h  LibraryBuilder.h  LoanBuilder.h  UserBuilder.h
include/config/: DatabaseManager.h
include/controllers/: AuthController.h  BookController.h  LibraryController.h  LoanController.h  UserController.h
include/enteties/: Author.h  Book.h  Library.h  Loan.h  User.h
include/logger/: Logger.h
include/notifications/: EmailSender.h  NotificationSender.h  NotificationService.h  SMSSender.h
include/observer/: Observable.h
include/repositories/: AuthorRepository.h  BookRepository.h  LibraryRepository.h  LoanRepository.h  Repository.h  UserRepository.h
include/services/: AuthorService.h  BookService.h  LibraryService.h  LoanSerivce.h  Service.h  UserService.h
src/builder/: AuthorBuilder.cpp  BookBuilder.cpp  LibraryBuilder.cpp  LoanBuilder.cpp  UserBuilder.cpp
src/config/: DatabaseManager.cpp
src/controllers/: AuthController.cpp  BookController.cpp  LibraryController.cpp  LoanController.cpp  UserController.cpp
src/enteties/: Author.cpp  Book.cpp  Library.cpp  Loan.cpp  User.cpp
src/logger/: Logger.cpp
src/notifications/: EmailNotificationService.cpp  EmailSender.cpp  NotificationObserver.cpp  SMSNotificationService.cpp
src/observer/: Observable.cpp
src/repositories/: AuthorRepository.cpp  BookRepository.cpp  LibraryRepository.cpp  LoanRepository.cpp  UserRepository.cpp
src/services/: AuthorService.cpp  BookService.cpp  LibraryService.cpp  LoanService.cpp  UserService.cpp
